# backend/routers/userRoutes.js
@@ -6,15 +6,19 @@ const { validateRegisterUser } = require('../middlewares/validationMiddleware');
 
 const router = express.Router();
 
-// Route untuk register
+// Route tanpa middleware
 router.post('/register', validateRegisterUser, userController.registerUser);
-router.get('/get-users', authenticateToken, authorizeRoles('admin'), userController.getUsers);
 router.put('/update/:userId', userController.updateUser);
-router.patch('/delete/:userId', authenticateToken, authorizeRoles('admin'), userController.softDeleteUser);
-router.patch('/restore/:userId', authenticateToken, authorizeRoles('admin'), userController.restoreUser);
 router.get('/:username/roles', userController.getRolesByUsername);
 router.post('/add-role', userController.addRoleToUser);
 router.get('/get-roles', userController.getRoles);
 router.post('/create-role', userController.createRole);
+
+// Middleware untuk rute yang membutuhkan autentikasi
+router.use(authenticateToken);
+
+router.get('/get-users', authorizeRoles('admin'), userController.getUsers);
+router.patch('/delete/:userId', authorizeRoles('admin'), userController.softDeleteUser);
+router.patch('/restore/:userId', authorizeRoles('admin'), userController.restoreUser);
 
 module.exports = router;
